Fixed overflow

--- a/dashboard/src/style/archives.pcss
+++ b/dashboard/src/style/archives.pcss
@@ -147,6 +147,7 @@
       & .message-content {
         font-size: 16px;
         margin-top: -3px;
+        word-break: break-all;
       }
     }
   }
